<resources>
    <string name="app_name">SecurEd</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_a_story">Choose a Story</string>
    <string name="grade">Grade</string>
    <string name="next">Next</string>
    <string name="the_story">The Story</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="quiz_explanation">Quiz Explanation</string>
    <string name="next_story">Next Story</string>
    <string name="what_is_security">What is Security?</string>
    <string name="secured">SecurEd</string>
    <string name="play_button">Play</string>
    <string name="tagline">The Information Security Game</string>
    <string name="score_board">Score Board</string>
    <string name="end">End</string>
    <string name="btn_save">Save</string>
    <string name="security_explanation">In general, security is the quality or state of being secure—to be free from danger. In other words, protection against adversaries—from those who would do harm, intentionally or otherwise—is the objective.</string>
    <string name="topic1">Trojan SMS</string>
    <string name="explanation_1">Malware known as Trojan SMSs worm is a major type of malicious app used to interrupt the normal operations of your mobile device and gain access to the private information you have stored in it such as address book. These kinds of threats are called Malware. Some examples of what they do are: steal your contacts and pictures, track your location, access your text messages, log your keystrokes and passwords, Send SMS messages to premium numbers without your knowledge that can result in a very high phone bill, fake legitimate banking applications and steal your personal banking information when you log in. Trojan-SMS Agent is currently ranked 210 in the world for mobile, online and PC malware, affecting between 50,000 and 100,000 users. Unfortunately, today SMS Trojans are one the easiest ways for cybercriminals to make easy money fast. Malicious use of premium rate SMS services is spreading around the world.</string>
    <string name="story_1">That morning Melissa didn\'t feel like going to work. During her previous week she had had too much work to keep up with now that her boss was out on vacations, and the sore throat that threatened to develop into a cold convinced her that staying home was the right thing to do. \‘Poor Debbie\’ she thought. \‘I hope she can handle all my customers today\’.\nAfter calling out from work, she realized that she didn\'t even have the intention to get out from under her sheets, until her body came up with physiological excuse to do so, which didn\'t take too long. –Ugh… hate my life—she said, while washing her face on the bathroom sink. Suddenly the annoying but familiar sound of her alarm went off and she debated whether to keep listening to it or just going back to her bedroom and turning it off. She opted for the latter. After turning it off, she took her phone from her drawer and took it to the bathroom with her to read her newsfeed on Facebook while she brushed her teeth with the other hand.\nHowever before opening her Facebook app, she noticed 6 SMS text notifications from her friend Debbie. –Oh my god, is she freaking out already!? —She mumbled still with her toothbrush in her mouth. She went ahead and opened one of the text messages.\n‘You’ll not believe this! Check this out: http://bitk.it/1cnQkZU’ —said the text message. Melissa\’s curiosity made her click on the text message and her browser opened tons of websites with advertisements of every kind.\nNot understanding why Debbie would send her a link like that, she decided to call her in case she had missed the point. But after opening her contacts app, she noticed that all her contacts were all gone and the next week she got her bill with an additional $104.59 for text messages to international numbers.</string>
    <string name="topic2">Cloud Computing</string>
    <string name="explanation_2">Cloud computing is a phrase used to describe a variety of computing concepts that involve a large number of computers connected through a real-time communication network such as the Internet. It is very similar to the concept of utility computing. In science, cloud computing is a synonym for distributed computing over a network, and means the ability to run a program or application on many connected computers at the same time.\n There are mainly four models of cloud computing: \n 1. Infrastructure as a Service (IaaS).\n 2. Platform as a Service (PaaS).\n 3. Software as a Service (SaaS).\n 4. Network as a Service (Naas)</string>
    <string name="story_2">There are two characters in the setting. They are working in a company called CloudOn. They are in the same department. The first character is a guy named Danny. Danny is the guy who loves Cloud Computing. The second character is a girl named Sophia. Sophia is the one who disapprove Cloud Computing.\n Danny: Ah! Why is our company still not moving to the Cloud?? My job and my life could be so much easier!\n Sophia: (was looking away, now looking at Danny) Don’t you think the cloud is a bit dangerous for our company? I think we are not prepared for that.\n Danny: Nonsense! Cloud Computing is perfect for our company! If we had our data stored on the cloud. We could access the company’s data from anywhere around the globe! It is so convenient! We can move beyond time zone and geographic location issues!\n Sophia: Uhmmm.... yeah... but don’t you think it is risky to store information in the cloud? Well maybe, we are more prone to data loss and leakage?\n Danny: How it is so?\n Sophia: The threat of data compromise increases in the cloud, due to the number of and interactions between risks and challenges which are either unique to cloud, or more dangerous because of the architectural or operational characteristics of the cloud environment.\n Danny: Yeah, but what we could do is:implement strong API access control and encrypt and protect integrity of data in transit.\n Sophia: hmm.. but still Danny, I think we have to wait for the CIO to decide. Dealing with the Cloud is a big decision for this company. </string>
     <string name="topic3">Android Malware</string>
    <string name="Quiz3_Title">Android Malware Quiz</string>
    <string name="Quiz3_Question1">1. What should you do when downloading a new app on your phone?</string>
    <string name="Quiz3_Question1_Answer1">Skip through the permissions screen</string>
    <string name="Quiz3_Question1_Answer2">Check App Store Reviews</string>
    <string name="Quiz3_Question1_Answer3">Skip scanning the app</string>
    <string name="Quiz3_Question1_Answer4">Download the app from a random website</string>
    <string name="Quiz3_Question2">2. True or False: It is important to pay attention to the permissions requested by an app.</string>
    <string name="Quiz3_Question2_Answer1">True</string>
    <string name="Quiz3_Question2_Answer2">False</string>
    <string name="Quiz3_Question3">3. What major mistake did Jake make in the story?</string>
    <string name="Quiz3_Question3_Answer1">He didn\'t check the reviews of the app before downloading.</string>
    <string name="Quiz3_Question3_Answer2">He didn\'t read the permissions screen before downloading.</string>
    <string name="Quiz3_Question3_Answer3">He used the official Google app store.</string>
    <string name="Quiz3_Question3_Answer4">A and B</string>
    <string name="Quiz3_Question4">4. Which of the following could be a bad idea for protecting a device?</string>
    <string name="Quiz3_Question4_Answer1">Installing an app from an untrusted source</string>
    <string name="Quiz3_Question4_Answer2">Checking app reviews</string>
    <string name="Quiz3_Question4_Answer3">Using encryption</string>
    <string name="Quiz3_Question4_Answer4">Scanning downloaded apps</string>
    <string name="Quiz3_Question5">5. Which of the following is a good idea for protecting a device?</string>
    <string name="Quiz3_Question5_Answer1">Turning off antivirus</string>
    <string name="Quiz3_Question5_Answer2">Not using a password for the lock screen</string>
    <string name="Quiz3_Question5_Answer3">Clicking on ads in a suspicious app</string>
    <string name="Quiz3_Question5_Answer4">Checking an app\'s requested permissions</string>
    <string name="Quiz3_Question6">6. True or false: An app on the official Google store can\'t have malware</string>
    <string name="Quiz3_Question6_Answer1">True</string>
    <string name="Quiz3_Question6_Answer2">False</string>
    <string name="Quiz3_Question7">7. What can malware cause?</string>
	<string name="Quiz3_Question7_Answer1">Loss of money</string>
    <string name="Quiz3_Question7_Answer2">Device malfunctioning</string>
    <string name="Quiz3_Question7_Answer3">Spam</string>
    <string name="Quiz3_Question7_Answer4">All of the above</string>
    <string name="Quiz3_Question8">8. What is the name of the app that contained malware from the story?</string>
    <string name="Quiz3_Question8_Answer1">Bird of Flap</string>
    <string name="Quiz3_Question8_Answer2">Angry Birds</string>
    <string name="Quiz3_Question8_Answer3">Flappy Bird</string>
    <string name="Quiz3_Question8_Answer4">Flappy Pup</string>
    <string name="Quiz3_Question9">9. True or false: Malware can cause a phone\'s battery to drain faster</string>
    <string name="Quiz3_Question9_Answer1">True</string>
    <string name="Quiz3_Question9_Answer2">False</string>
    <string name="Quiz3_Question10">10. What can you do to protect your android device?</string>
    <string name="Quiz3_Question10_Answer1">Use a trusted antivirus</string>
    <string name="Quiz3_Question10_Answer2">Use a trusted anti-malware</string>
    <string name="Quiz3_Question10_Answer3">Keep your device updated</string>
    <string name="Quiz3_Question10_Answer4">All of the above</string>
    <string name="Quiz3_Exp_Title">Malware Quiz Explanation</string>
    <string name="Quiz3_Exp_Question1">Question 1: \nThe answer is "Check reviews", because the reviews may mention malware or other undesirable aspects of the application.</string>
    <string name="Quiz3_Exp_Question2">Question 2: \nThe answer is \"True\", because looking at the permissions of an app could reveal that the app is requesting more permissions than it needs, like access to your contacts or any other sensitive data, which could be misused.</string>
    <string name="Quiz3_Exp_Question3">Question 3: \nThe answer is "A and B", because if Jake had read reviews, he might have been informed about the malware, or if he had checked the permissions requested by the device he may have noticed that it requested the ability to send text messages.</string>
    <string name="Quiz3_Exp_Question4">Question 4: \nThe answer is "Installing an app from an untrusted source", because installing from untrusted sources means the app has not been checked by Google at all, and could contain anything (such as malware).</string>
    <string name="Quiz3_Exp_Question5">Question 5: \nThe answer is "Checking an app\'s requested permissions", because if you pay attention to the permissions requested you may notice that the app is requesting permissions it doesn\'t need, which may indicate that it is malware.</string>
    <string name="Quiz3_Exp_Question6">Question 6: \nThe answer is "False", because even apps on the app store could contain undetected malware.</string>
    <string name="Quiz3_Exp_Question7">Question 7: \nThe answer is "All of the above".  Malware can cause loss of money (such as the malware from the story), device malfunctioning (like the bitcoin mining apps from the lecture which caused rapid battery loss), and spam (if the app gains contact information).</string>
    <string name="topic4">WEP Encryption</string>
</resources>